# jobfetcher

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.agents/: README.md  agentic-workflow.md
.agents/roles/: examiner.md  investigator.md  orchestrator-scribe.md  surgeon.md
.claude/commands/: close-step.md  investigate.md  review-step.md  start-step.md
.github/workflows/: ci.yml
config/: profile.sample.yml  search_config.sample.yml
docs/: 00-design-philosophy.md  01-session-decision-journal.md  02-architecture.md  03-roadmap.md  04-v0-build-plan.md  05-methodology.md  diagrams.md  getting-started.md  querying.md
docs/adr/: 0001-evolutionary-architecture.md  0002-tool-minimalism-wins.md  0003-postgres-over-dynamodb.md  0004-warehouse-strategy.md  0005-dedup-cluster-and-surface.md  0006-cv-renderer.md  0007-self-hosted-distribution.md  0008-region-us-east-1.md  0009-batch-not-debezium-v0.md  0010-job-source-jsearch.md  0011-dimensional-analytical-model.md  0012-model-agnostic-llm.md  0013-enforcement-gate-trio-branch-pr.md  0014-operational-store-aurora-serverless-data-api.md  0015-type-replaceable-pipeline-stages.md  0016-llm-dissection-at-silver.md  0017-llm-transport-openai-compatible-deepseek.md  0018-persistence-sqlalchemy-data-api-repository.md  0019-agentic-build-orchestration.md  0020-lambda-deployment-packaging.md  0021-m1-pipeline-hardening.md  0022-runtime-config-in-s3.md  0023-reassess-replay.md  0024-query-via-export.md  0025-score-event-lineage.md  0026-outcome-tracking-override-lineage.md  0027-digest-truthfulness.md  0028-scorer-subscores-shadow.md  0029-ops-hardening.md  0030-reachable-full-list-from-digest.md  0031-boundary-self-consistency-honest-graduations.md  0032-full-s3-audit-persistence.md  0033-local-control-panel.md  0034-investigation-dossier-system.md  0035-outcome-capture-endpoint.md  README.md
docs/investigations/: INV-001-dark-feedback-loop.md  README.md  _TEMPLATE.md
docs/ledgers/: backlog.md  decisions-locked.md  errors.md  interface-contracts.md  phase-index.md  procedure-registry.md
docs/runbooks/: deploy.md
docs/session-log/: working-document.md
migrations/: env.py
migrations/versions/: 0001_v0_initial_schema.py  (+5 more)
scripts/: build_lambda.py  deepseek_smoke.py  export.py  jsearch_probe.py  panel.py  preview_digest.py  push_config.py  search_spec.py  track.py
terraform/: .gitignore  .terraform.lock.hcl  alarms.tf  aurora.tf  capture.tf  eventbridge.tf  iam.tf  lambda.tf  outputs.tf  providers.tf  s3.tf  secrets.tf  ses.tf  variables.tf
tests/: README.md  helpers.py  test_capture_handler.py  test_capture_token.py  test_clean_fingerprint.py  test_db_config.py  test_db_resume.py  test_dissector.py  test_export.py  test_gold_filter.py  test_handler_helpers.py  test_ingest.py  test_integration_db.py  test_integration_deepseek.py  test_integration_gold_filter.py  test_integration_handler.py  test_integration_ingest.py  test_integration_migration_0004.py  test_integration_migration_0006.py  test_integration_notifier.py  test_integration_outcome_tracking.py  test_integration_score_event.py  test_integration_scorer.py  test_jsearch_source.py  test_live_ingest.py  test_live_scorer.py  test_llm_openai.py  test_models.py  test_notifier.py  test_profile.py  test_push_config.py  test_reassess.py  test_report.py  test_repository_mapping.py  test_s3_audit.py  test_s3_config.py  test_s3_raw.py  test_s3_reports.py  test_scorer.py  test_search_spec.py  (+1 more)
(+35 files in other folders)
