[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobfetcher"
version = "0.0.0"
description = "Personal-scale serverless job-matching pipeline, built as an evolutionary architecture."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
    "boto3>=1.34",
    "sqlalchemy>=2",
    "sqlalchemy-aurora-data-api>=0.5",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "testcontainers[postgres]>=4", "moto[s3]>=5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: hits a live external resource — the DeepSeek API (key + balance) or a real Postgres (Docker / $JOBFETCHER_DB_URL); deselect with -m 'not integration'",
]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]
