[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobfetcher"
version = "0.0.0"
description = "Personal-scale serverless job-matching pipeline, built as an evolutionary architecture."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
    "boto3>=1.34",
    "sqlalchemy>=2",
    "sqlalchemy-aurora-data-api>=0.5",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.4", "testcontainers[postgres]>=4", "moto[s3]>=5"]
# Not a runtime dep — the recommended viewer for the `scripts/export.py` snapshot (ADR-0024):
#   pip install -e '.[query]' && datasette export/jobs.sqlite
query = ["datasette>=1"]
# Not a runtime dep — the local operator control panel (ADR-0033), NEVER bundled in the Lambda:
#   pip install -e '.[panel]' && streamlit run scripts/panel.py
panel = ["streamlit>=1.36"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: hits a live external resource — the DeepSeek API (key + balance) or a real Postgres (Docker / $JOBFETCHER_DB_URL); deselect with -m 'not integration'",
]

# Coverage is measured on demand (Step 9 wires it into CI); `--cov` is intentionally NOT
# in addopts so plain `pytest` works without the plugin. Run:
#   pytest --cov=src/jobfetcher --cov-report=term
[tool.coverage.run]
source = ["src/jobfetcher"]

[tool.coverage.report]
exclude_lines = [
    "\\.\\.\\.",                       # abstract-method / Protocol stubs
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]
